2005-12-31 Magnus Hagdorn
 * erosion.f90: don't scale soft_a
 * erosion_types.f90: swap soft_a and soft_b, to be in accordance with
   documentation
 * erosion_transport.f90: ditto

2005-12-19 Magnus Hagdorn
 * configure.in: fix bug
 * erosion.f90: remove non-existing module file
 * Makefile.am: wildcard macro

2005-12-13 Magnus Hagdorn
 * configure.in: use AM_PATH_GLIMMER to set up GLIMMER
 * bootstrap: look for glimmer.m4
 * Makefile.am: add rule to regenerate aclocal.m4
 * INSTALL: update installation instructions

2005-12-13 Magnus Hagdorn
 * configure.in: bump version number for development

2005-12-13 Magnus Hagdorn
 * configure.in: bump version number
 * NEWS: update

2005-12-06 Magnus Hagdorn
 * configure.in: check if we should run tests
 * plot_seds.py: plot multiple profiles
 * clean up tests in tests directory
 * update documentation
 changes in src/
 * eis_erosion.f90: derive name of log file from configuration file name,
   read initial sediment distribution from input CF file
 * simple_erosion.f90: ditto
 * erosion.f90: calculate isostatic adjustment due to sediment redistribution
   and erosion. Modify ice bed if required.
 * erosion_setup.f90: new switch to disable ice bed modification
 * erosion_types.f90: new variables to support isostasy calculations

2005-11-30 Magnus Hagdorn
 * plot_seds_profile.py: improvements

2005-11-11 Magnus Hagdorn
 * plot_seds_profile.py: new prog for plotting sediment profiles

2005-10-03 Magnus Hagdorn
 * erosion_types.f90: new switch to enable sliding velo calculations
 * erosion_sediment.f90: use new switch to enable sliding velo calculations
 * erosion_setup.f90: load switch from config file

2005-10-03 Magnus Hagdorn
 * erosion_types.f90: increase number of parameters
 * erosion_sediment.f90: bug fix and use precense of basal water to 
   determine if erosion happens, add function for calculating basal 
   traction parameter based on moving sediments
 * eis_erosion.f90: use new glide API